<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/title_color" >

    <ImageView
        android:id="@+id/title_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/button_click_bg"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/back"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/connect_state_non"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/title_setting"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_click_bg"
        android:padding="5dp"
        android:text="@string/action_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/content_size"
        android:visibility="gone" />

</RelativeLayout>